[package]
name = "reinforcement_learning_with_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
# Downgrade polars from 0.30 to 0.28 to be able to use tarpaulin due to dependnecy issue for indexmap. 
# Tarpaulin downgrades the package from 1.9.2 to 1.8.2 and makes the polars package not to compile.
polars = { version = "0.28.0", features = ["lazy"] }
rayon = "1.7"
approx = "0.5.1"
chrono = "0.4.26"
